# social_media_agent

./: .cursorrules  .dockerignore  .env.example  .gitignore  BRD.md  Dockerfile  README.md  Readme.md  USER_GUIDE.md  docker-compose.dev.yml  docker-compose.yml  invoke_agent.ipynb  invoke_agent.py  langgraph.json  package-lock.json  package.json  pyproject.toml  requirements.txt  supervisor.dev.conf  test_twitter_1.py  test_twitter_2.py
agent/: .gitignore  Readme.md  invoke_agent.ipynb  posts.csv  pyproject.toml
agent/backend/: agent.py  app.py  config.py  tools.py
agent/backend/automation/: browser.py
agent/backend/automation/pages/: feed_page.py  login_page.py  profile_page.py
agent/backend/prompts/: prompts.py
agent/backend/schema/: schema.py  state.py
backend/: agent.py
backend/automation/: browser.py
backend/automation/pages/: feed_page.py  login_page.py
backend/models/: models.py
backend/prompts/: prompts.py
backend/schema/: schema.py
backend/services/: twitter_service.py
backend/utils/: utils.py
ui/: .env.local  README.md  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
ui/app/: Main.tsx  globals.css  layout.tsx  page.tsx
ui/app/api/copilotkit/: route.ts
ui/app/api/health/: route.ts
ui/app/components/: AgentCapabilities.tsx  CollapsibleSection.tsx  ContentItems.tsx  EditableContent.tsx  GeneratedPosts.tsx  LandingPage.tsx  ThemeProvider.tsx  WriterExamples.tsx
ui/app/components/layouts/: MainLayout.tsx
ui/app/components/ui/: ExpandableCard.tsx  Progress.tsx  button.tsx  card.tsx  pixel-button.tsx  pixel-canvas.tsx  tabs.tsx  toast.ts  tooltip.tsx
ui/app/dashboard/: page.tsx
ui/app/hooks/: useAgentState.ts  useAppTheme.ts  useThemeStyles.ts
ui/app/lib/: constants.ts  types.ts  utils.ts
ui/app/lib/types/: state.ts
ui/app/providers/: ThemeProvider.tsx  theme-provider.tsx
ui/app/styles/: theme.ts
ui/app/types/: theme.ts
(+3 files in other folders)
