[tool.poetry]
name = "social_media_agent"
version = "0.1.0"
description = ""
authors = ["shrey shah <sshreyv@gmail.com>"]
readme = "README.md"
packages = [
    { include = "backend" }
]

[tool.poetry.scripts]
start = "backend.app:main"

[tool.poetry.dependencies]
python = "3.11.*"
langgraph = "^0.2.34"
langgraph-checkpoint-sqlite = "^2.0.1"
langgraph-checkpoint-postgres = "^2.0.2"
langchain-community = "^0.3.3"
langchain-openai = "^0.2.1"
langchain-postgres = "^0.0.12"
langchain = "^0.3.1"
langsmith = "^0.1.143"
langchain-anthropic = "^0.2.3"
beautifulsoup4 = "^4.12.3"
openai = "^1.51.0"
copilotkit = "0.1.28a5"
uvicorn = "^0.31.0"
selenium = "^4.26.1"
rich = "^13.9.4"
whisper = "^1.1.10"
praw = "^7.8.1"
python-dotenv = "^1.0.1"
youtube-transcript-api = "^0.6.3"
gradio = "^5.6.0"
pypdf2 = "^3.0.1"
playwright = "^1.49.0"
lxml = "^5.3.0"
typing-extensions = "^4.12.2"
html2text = "^2024.2.26"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
